# open-multiple-model-mcp-client

./: .env-example  CLAUDE.md  README.md  composer.py  config.py  downstream_controller.py  gateway.py  main.py  mcp_client.py  mcp_servers.json  pyproject.toml  server_kit.py
src/: config.py  main.py  mcp_client.py
src/api/: composer.py  downstream_controller.py  downstream_server.py  gateway.py
src/ui/: index.html
src/utils/: message_handler.py  model_client.py  response_item.py  tool_handler.py  tools.py
