[project]
name = "open-multiple-model-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "fastapi>=0.110.0",
    "mcp>=1.8.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.29.0",
]
